# SSTA-NN

./: .gitignore  50-50-50-50-epoch-240.pt  CMakeLists.txt  MLP_result.csv  MLP_test_sample_result.csv  Makefile  README.md  distribution.cpp  distribution.h  model.pt  normal_max.cpp  normal_rv.cpp  normal_rv.h  normal_rv_max.cpp  normal_rv_max2.cpp  normal_rv_max_three_moments.cpp  normal_rv_test.cpp  skew_normal_rv_max.cpp  skew_normal_rv_test.cpp  skewness.cpp  week2.cpp
dataset/: generator.py  normal_rv_dataset.csv  normal_rv_test_sample.csv  output.csv  skewed_dataset_1.csv  skewed_rv_dataset.csv
include/: distribution.h  normal_max.h  normal_rv.h  skewed_max.h  skewed_rv.h
model/: MLP_NN_msa.py  MLP_normal.py  MLP_normal_mean.py  MLP_normal_skewness.py  MLP_normal_test.py  MLP_normal_var.py  MLP_skewed_mean.py  MLP_skewed_skewness.py  MLP_skewed_var.py  output_v2.csv
src/: distribution.cpp  main.cpp  normal_max.cpp  normal_rv.cpp  skewed_max.cpp  skewed_rv.cpp
tests/: MC_skew_max.py  MLP_normal_test.py  compare_test.py  compare_test_2.py  compare_total.py  generator.py  heatmap.py  myjob.slurm  normal_mc_test.csv  normal_rv_num_test.cpp  normal_rv_test.cpp  normal_rv_test.py  normal_test.csv  normal_total.csv  num_100.csv  num_40.csv  skewed_rv_integration_test.py  skewed_rv_test.cpp  skewed_rv_test.py  step=1000_bound=7.csv  step=100_bound=10.csv  step=100_bound=7.csv  step=500_bound=10.csv  step=500_bound=7.csv  train.sh
week1/: normal_rv_max  normal_rv_max.cpp
week2/: normal_rv_max_three_moments.cpp  skew_normal_rv_max  skew_normal_rv_max.cpp
(+743 files in other folders)
